--- a/Lista_2/Lista_matplotlib_2.ipynb
+++ b/Lista_2/Lista_matplotlib_2.ipynb
@@ -279,22 +279,22 @@
         "        total_units.append(int(i[7].strip()))\r\n",
         "    x = True\r\n",
         "\r\n",
-        "plt.plot(numero_mes, facecream, linewidth =\"3\", color = \"blue\", label = \"Profit data of last year\")\r\n",
+        "plt.plot(numero_mes, facecream, linewidth =\"3\", color = \"blue\", label = \"Face cream Sales Data\")\r\n",
         "plt.plot(numero_mes, facecream,'o', c=\"blue\")\r\n",
         "\r\n",
-        "plt.plot(numero_mes, facewash, linewidth =\"3\", color = \"green\", label = \"Profit data of last year\")\r\n",
+        "plt.plot(numero_mes, facewash, linewidth =\"3\", color = \"green\", label = \"Face Wash Sales Data\")\r\n",
         "plt.plot(numero_mes, facewash,'o', color=\"green\")\r\n",
         "\r\n",
-        "plt.plot(numero_mes, toothpaste, linewidth =\"3\", color = \"green\", label = \"Profit data of last year\")\r\n",
+        "plt.plot(numero_mes, toothpaste, linewidth =\"3\", color = \"green\", label = \"ToothPaste Sales Data\")\r\n",
         "plt.plot(numero_mes, toothpaste,'o', c=\"green\")\r\n",
         "\r\n",
-        "plt.plot(numero_mes, bathingsoap, linewidth =\"3\", color = \"red\", label = \"Profit data of last year\")\r\n",
+        "plt.plot(numero_mes, bathingsoap, linewidth =\"3\", color = \"red\", label = \"ToothPaste Sales Data\")\r\n",
         "plt.plot(numero_mes, bathingsoap,'o', c=\"red\")\r\n",
         "\r\n",
-        "plt.plot(numero_mes, shampoo, linewidth =\"3\", color = \"mediumpurple\", label = \"Profit data of last year\")\r\n",
+        "plt.plot(numero_mes, shampoo, linewidth =\"3\", color = \"mediumpurple\", label = \"ToothPaste Sales Data\")\r\n",
         "plt.plot(numero_mes, shampoo,'o', c=\"mediumpurple\")\r\n",
         "\r\n",
-        "plt.plot(numero_mes, moisturizer, linewidth =\"3\", color = \"Sienna\", label = \"Profit data of last year\")\r\n",
+        "plt.plot(numero_mes, moisturizer, linewidth =\"3\", color = \"Sienna\", label = \"ToothPaste Sales Data\")\r\n",
         "plt.plot(numero_mes, moisturizer,'o', c=\"Sienna\")\r\n",
         "\r\n",
         "plt.yticks([1000, 2000, 4000, 6000, 8000, 10000, 12000, 15000, 18000])\r\n",
